[package]
name = "sfink_exp_callgraph_traversal"
version = "0.1.0"
authors = ["Steve Fink <sphink@gmail.com>"]
edition = '2018'

[dependencies]
petgraph = "0.4"
regex = "1.1"
rustyline = "4.0"
lazy_static = "1.3"

[dependencies.cpython]
version = "0.1"
default-features = false
features = ["python27-sys", "extension-module-2-7"]

[lib]
name = "hazgraph"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cgtraverse"
path = "src/main.rs"
